--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/style.css">
-</head> 
+</head>
+
 <body>
     <!--  Navbar Start -->
     <nab class="navbar background  ">
         <ul class="nav-list ">
-            <div class="logo"><img src="img/images (2).jfif" alt="Logo" ></div>
-          <li> <a href="#home">Home</a></li>
-          <li> <a href="#about">About</a></li> 
-          <li> <a href="#service">Service</a></li>
-          <li> <a href="#contact">Contact</a></li>
+            <div class="logo"><img src="img/images (2).jfif" alt="Logo"></div>
+            <li> <a href="#home">Home</a></li>
+            <li> <a href="#about">About</a></li>
+            <li> <a href="#service">Service</a></li>
+            <li> <a href="#contact">Contact</a></li>
         </ul>
         <div class="rightNav">
             <input type="text" name="search" id="search" placeholder="Search">
@@ -23,13 +25,14 @@
         </div>
     </nab>
     <!-- Navbar End  -->
-    
+
     <!-- home page  start -->
     <section class="background firstSection">
         <div class="box-main">
             <div class="firstHalf">
                 <p class="text-bg">The Futures of Education is here</p>
-                <p class="text-small">In this word of 7 billion people we need to educate all of them. This is the future of an education world WE are Produ of thisThe future of Education is here</p>
+                <p class="text-small">In this word of 7 billion people we need to educate all of them. This is the
+                    future of an education world WE are Produ of thisThe future of Education is here</p>
                 <div class="buttons">
                     <button class="btn">Suscribe</button>
                     <button class="btn">Watch Video</button>
@@ -47,42 +50,80 @@
     <!-- second Section Start -->
     <section class="section">
         <div class="paras">
-        <p class="sectionTag text-bg">The end of your search if here</p>
-        <p class="sectionSubTag text-small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam repudiandae nobis exercitationem eius quidem explicabo, nesciunt iusto maxime provident consequuntur officiis magni. Neque magni repudiandae nisi minima cupiditate doloribus amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam soluta pariatur fuga libero aspernatur rem nemo, laudantium totam minima. Quas consequuntur obcaecati impedit dicta cumque deserunt. Nisi in iure velit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nemo repellendus explicabo ipsa suscipit rerum cupiditate repellat quod ut sunt fuga, consectetur alias, velit omnis ratione, aspernatur aliquid id corrupti.
-        </p>
-    </div>
-            <div class="thumbnail">
-                <img src="img/download (2).jfif" alt="" height="250px">
-            </div>
+            <p class="sectionTag text-bg">The end of your search if here</p>
+            <p class="sectionSubTag text-small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+                repudiandae nobis exercitationem eius quidem explicabo, nesciunt iusto maxime provident consequuntur
+                officiis magni. Neque magni repudiandae nisi minima cupiditate doloribus amet. Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Magnam soluta pariatur fuga libero aspernatur rem nemo, laudantium
+                totam minima. Quas consequuntur obcaecati impedit dicta cumque deserunt. Nisi in iure velit! Lorem ipsum
+                dolor sit amet consectetur adipisicing elit. Nulla nemo repellendus explicabo ipsa suscipit rerum
+                cupiditate repellat quod ut sunt fuga, consectetur alias, velit omnis ratione, aspernatur aliquid id
+                corrupti.
+            </p>
+        </div>
+        <div class="thumbnail">
+            <img src="img/download (2).jfif" alt="" height="250px">
+        </div>
     </section>
-     <!-- second Section end -->
+    <!-- second Section end -->
 
-     <!-- second Section Start -->
+    <!-- second Section Start -->
     <section class="section section-Left">
         <div class="paras">
-        <p class="sectionTag text-bg">The end of your search if here</p>
-        <p class="sectionSubTag text-small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam repudiandae nobis exercitationem eius quidem explicabo, nesciunt iusto maxime provident consequuntur officiis magni. Neque magni repudiandae nisi minima cupiditate doloribus amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam soluta pariatur fuga libero aspernatur rem nemo, laudantium totam minima. Quas consequuntur obcaecati impedit dicta cumque deserunt. Nisi in iure velit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nemo repellendus explicabo ipsa suscipit rerum cupiditate repellat quod ut sunt fuga, consectetur alias, velit omnis ratione, aspernatur aliquid id corrupti.
-        </p>
-    </div>
-            <div class="thumbnail">
-                <img src="img/download (2).jfif" alt="" height="250px">
-            </div>
+            <p class="sectionTag text-bg">The end of your search if here</p>
+            <p class="sectionSubTag text-small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+                repudiandae nobis exercitationem eius quidem explicabo, nesciunt iusto maxime provident consequuntur
+                officiis magni. Neque magni repudiandae nisi minima cupiditate doloribus amet. Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Magnam soluta pariatur fuga libero aspernatur rem nemo, laudantium
+                totam minima. Quas consequuntur obcaecati impedit dicta cumque deserunt. Nisi in iure velit! Lorem ipsum
+                dolor sit amet consectetur adipisicing elit. Nulla nemo repellendus explicabo ipsa suscipit rerum
+                cupiditate repellat quod ut sunt fuga, consectetur alias, velit omnis ratione, aspernatur aliquid id
+                corrupti.
+            </p>
+        </div>
+        <div class="thumbnail">
+            <img src="img/download (2).jfif" alt="" height="250px">
+        </div>
     </section>
-     <!-- second Section end -->
+    <!-- second Section end -->
 
-     <!-- second Section Start -->
+    <!-- second Section Start -->
     <section class="section">
         <div class="paras">
-        <p class="sectionTag text-bg">The end of your search if here</p>
-        <p class="sectionSubTag text-small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam repudiandae nobis exercitationem eius quidem explicabo, nesciunt iusto maxime provident consequuntur officiis magni. Neque magni repudiandae nisi minima cupiditate doloribus amet.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam soluta pariatur fuga libero aspernatur rem nemo, laudantium totam minima. Quas consequuntur obcaecati impedit dicta cumque deserunt. Nisi in iure velit!
- Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nemo repellendus explicabo ipsa suscipit rerum cupiditate repellat quod ut sunt fuga, consectetur alias, velit omnis ratione, aspernatur aliquid id corrupti.
-        </p>
-    </div>
-            <div class="thumbnail">
-                <img src="img/download (2).jfif" alt="" height="250px">
-            </div>
+            <p class="sectionTag text-bg">The end of your search if here</p>
+            <p class="sectionSubTag text-small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+                repudiandae nobis exercitationem eius quidem explicabo, nesciunt iusto maxime provident consequuntur
+                officiis magni. Neque magni repudiandae nisi minima cupiditate doloribus amet.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam soluta pariatur fuga libero aspernatur
+                rem nemo, laudantium totam minima. Quas consequuntur obcaecati impedit dicta cumque deserunt. Nisi in
+                iure velit!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nemo repellendus explicabo ipsa suscipit
+                rerum cupiditate repellat quod ut sunt fuga, consectetur alias, velit omnis ratione, aspernatur aliquid
+                id corrupti.
+            </p>
+        </div>
+        <div class="thumbnail">
+            <img src="img/download (2).jfif" alt="" height="250px">
+        </div>
     </section>
-     <!-- second Section end -->
+    <!-- second Section end -->
+
+    <footer>
+    <div class="footer">
+        <h2>Footer</h2>
+        <div class="paragrph">
+            <h2>About</h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda voluptates incidunt sapiente corrupti perspiciatis reprehenderit sequi provident ex autem amet! Exercitationem neque incidunt iusto. Omnis exercitationem tempora illum praesentium quidem.
+
+        </div>
+        <div class="list">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Service</a>
+            <a href="">Contact</a>
+        </div>
+    </div>
+    </footer>
 </body>
+
 </html>
