footer Copy right part

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <a href="">Contact</a>
         </div>
     </div>
-    <p>&copy; Suresh Rokaya</p>
+    <p>&copy; Suresh Rokaya by sps collage</p>
     </footer>
 </body>
 
