--- a/about.html
+++ b/about.html
@@ -47,6 +47,100 @@
 
         </div>
 
+        <div class="third-section">
+            <div class="contant1">
+                <div class="heading">
+                    <h2>"Simply professionlas"</h2>
+                </div>
+
+                <div class="pr">Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul.
+                    Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis.
+                </div>
+
+                <div class="profile">
+                    <img src="https://preview.colorlib.com/theme/sierra/img/testimonials/testi-1.jpg" alt="">
+                    <p><span>Rahul</span><br>CEO Enterprise </p>
+                </div>
+            </div>
+
+            <div class="contant1  bg">
+                <div class="heading">
+                    <h2>"Simply professionlas"</h2>
+                </div>
+
+                <div class="pr">Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul.
+                    Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis.
+                </div>
+
+                <div class="profile">
+                    <img src="https://preview.colorlib.com/theme/sierra/img/testimonials/testi-1.jpg" alt="">
+                    <p><span>Rahul</span><br>CEO Enterprise </p>
+                </div>
+            </div>
+
+            <div class="contant1">
+                <div class="heading">
+                    <h2>"Simply professionlas"</h2>
+                </div>
+
+                <div class="pr">Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul.
+                    Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis.
+                </div>
+
+                <div class="profile">
+                    <img src="https://preview.colorlib.com/theme/sierra/img/testimonials/testi-1.jpg" alt="">
+
+                    <p><span>Rahul</span><br>CEO Enterprise </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="fourth-section">
+            <div class="contant ct1">
+                <img src="https://preview.colorlib.com/theme/sierra/img/icon/title-icon.png" alt="">
+                <div class="feature">Discover the Feature</div>
+                <div class="heading">We are a <span>Gibraltar</span>  based Company</div>
+                <div class="pr">
+                    Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. 
+                    Etiam nec odio vestibul.Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, 
+                    vel suscipit dolor. Donec elementum velit a orci facilisis rutrum. Nam convallis vel erat id dictum. Sed ut risus in orci convallis viverra
+                     a eget nisi. Aenean pellentesque elit vitae eros dignissim ultrices.
+                </div>
+            </div>
+
+            <div class="prog">
+                <div class="progr">
+                <p>Etiam nec odio vestibulum est mattis effic iturut magna.
+                     Pellente sque sit am et tellus blandit. Etiam nec odio vestibul.
+                </p>
+                <h6>HTML</h6>
+                <div class="progress" role="progressbar" aria-label="Default striped example" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar progress-bar-striped" style="width: 70%"></div>
+                  </div>
+                  <br>
+                  <h6>CSS</h6>
+                  <div class="progress" role="progressbar" aria-label="Success striped example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar progress-bar-striped bg-success" style="width: 60%"></div>
+                  </div>
+                  <br>
+                  <h6>Javascript</h6>
+                  <div class="progress" role="progressbar" aria-label="Info striped example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar progress-bar-striped bg-info" style="width: 20%"></div>
+                  </div>
+                  <br>
+                  <h6>React js</h6>
+                  <div class="progress" role="progressbar" aria-label="Warning striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar progress-bar-striped bg-warning" style="width: 15%"></div>
+                  </div><br>
+                  <h6>Graphic desing</h6>
+                  <br>
+                  <div class="progress" role="progressbar" aria-label="Danger striped example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar progress-bar-striped bg-danger" style="width: 10%"></div>
+                  </div>
+                  <br>
+                </div>
+            </div>
+        </div>
 
         
     </div>
