About section footer

--- a/index.html
+++ b/index.html
@@ -109,21 +109,23 @@
     <!-- second Section end -->
 
     <footer>
-    <div class="footer">
-        <h2>Footer</h2>
-        <div class="paragrph">
-            <h2>About</h2>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda voluptates incidunt sapiente corrupti perspiciatis reprehenderit sequi provident ex autem amet! Exercitationem neque incidunt iusto. Omnis exercitationem tempora illum praesentium quidem.
+        <div class="footer">
+            <h2>Footer</h2>
+            <div class="paragrph">
+                <h2>About</h2>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda voluptates incidunt sapiente corrupti
+                perspiciatis reprehenderit sequi provident ex autem amet! Exercitationem neque incidunt iusto. Omnis
+                exercitationem tempora illum praesentium quidem.
 
+            </div>
+            <div class="list">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Service</a>
+                <a href="">Contact</a>
+            </div>
         </div>
-        <div class="list">
-            <a href="">Home</a>
-            <a href="">About</a>
-            <a href="">Service</a>
-            <a href="">Contact</a>
-        </div>
-    </div>
-    <p>&copy; Suresh Rokaya by sps collage</p>
+        <p>&copy; Suresh Rokaya by sps collage</p>
     </footer>
 </body>
 
